<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3772E7"
    android:padding="16dp">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="start"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />

    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        >


            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="#1A1B22"
                android:gravity="center"
                android:layout_weight="1"
                android:backgroundTint="#FFFFFF"
                android:textAllCaps="false"
                app:icon="@drawable/search"
                app:iconGravity="textStart"
                app:iconPadding="16dp"
                app:cornerRadius="16dp"
                android:textSize="22sp"
                app:iconTint="#1A1B22"
                android:text="@string/title_search_button" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:textColor="#1A1B22"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            app:icon="@drawable/medialibrary"
            app:iconGravity="textStart"
            android:textSize="22sp"
            app:iconPadding="16dp"
            app:iconTint="#1A1B22"
            app:cornerRadius="16dp"
            android:text="@string/title_media_library_button" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:textColor="#1A1B22"
            android:gravity="center"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="22sp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="16dp"
            app:cornerRadius="16dp"
            app:iconTint="#1A1B22"
            android:text="@string/title_settings_button" />

    </LinearLayout>
    </LinearLayout>
